--- a/public/pharmacy.html
+++ b/public/pharmacy.html
@@ -255,7 +255,7 @@
 
                     var yellowSrc = '/images/yellow-marker.png',
                         yellowSize = new kakao.maps.Size(64, 69),
-                        yelloOption = { offset: new kakao.maps.Point(27, 69) };
+                        yellowOption = { offset: new kakao.maps.Point(27, 69) };
                     var yellowImage = new kakao.maps.MarkerImage(yellowSrc, yellowSize, yellowOption)
 
                     var graySrc = '/images/gray-marker.png',
