--- a/public/pharmacy.html
+++ b/public/pharmacy.html
@@ -417,7 +417,7 @@
                                             map: map,
                                             position: position,
                                             clickable: true,
-                                            image: yelloImage
+                                            image: yellowImage
                                         });
                                     } else if (status == "plenty") {
                                         remain = "100개 이상"
