--- a/public/pharmacy.html
+++ b/public/pharmacy.html
@@ -351,7 +351,7 @@
                                     }
 
                                     var iwContent = '<div class = "text-center" style="padding:5px; font-size:1.3em;">' + name + '</div><p>재고상태: ' + remain + 
-                                        '</p><br><a href="https://map.kakao.com/link/to/' + name + "," + stores.lat + "," + stores.lng + ' ">길찾기</a></br>', // 인포윈도우에 표출될 내용으로 HTML 문자열이나 document element가 가능합니다
+                                        '</p><p><a href="https://map.kakao.com/link/to/' + name + "," + stores.lat + "," + stores.lng + ' " target="_blank"  style = "text-align" >길찾기</a></p>', // 인포윈도우에 표출될 내용으로 HTML 문자열이나 document element가 가능합니다
                                         iwRemoveable = true; // removeable 속성을 ture 로 설정하면 인포윈도우를 닫을 수 있는 x버튼이 표시됩니다
 
                                     // 인포윈도우를 생성합니다
@@ -430,7 +430,7 @@
                                         });
                                     }
                                     var iwContent = '<div class = "text-center" style="padding:5px; font-size:1.3em;">' + name + '</div><p>재고상태: ' + remain + 
-                                        '</p><br><a href="https://map.kakao.com/link/to/' + name + "," + stores.lat + "," + stores.lng + ' ">길찾기</a></br>', // 인포윈도우에 표출될 내용으로 HTML 문자열이나 document element가 가능합니다
+                                        '</p><br><a href="https://map.kakao.com/link/to/' + name + "," + stores.lat + "," + stores.lng + ' " target="_blank" style = "text-align" >길찾기</a></br>', // 인포윈도우에 표출될 내용으로 HTML 문자열이나 document element가 가능합니다
                                         iwRemoveable = true; // removeable 속성을 ture 로 설정하면 인포윈도우를 닫을 수 있는 x버튼이 표시됩니다
 
                                     // 인포윈도우를 생성합니다
