--- a/public/pharmacy.html
+++ b/public/pharmacy.html
@@ -292,8 +292,8 @@
                             image: markerImage
                         })
 
-                        var loc = "?lat=" + lat + "&lng=" + lng + "&m=5000";
-                        var url = "https://8oi9s0nnth.apigw.ntruss.com/corona19-masks/v1/storesByGeo/json?address=" + loc
+                        var loc = "lat=" + lat + "&lng=" + lng + "&m=5000";
+                        var url = "https://8oi9s0nnth.apigw.ntruss.com/corona19-masks/v1/storesByGeo/json?" + loc
                         $.ajax({
                             type: "GET",
                             url: url,
