--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="코로나 바이러스 정보 모음집 사이트 입니다.">
-  <meta property="og:image" content="https://www.corona-hub.kr/images/main.jpeg" style="width: auto; height: auto;">
+  <meta property="og:image" content="http://www.corona-hub.kr/images/main.jpeg" style="width: auto; height: auto;">
   <meta property="og:type" content="website">
   <meta property="og:title" content="코로나 허브">
   <meta property="og:url" content="https://www.corona-hub.kr">
