--- a/public/pharmacy.html
+++ b/public/pharmacy.html
@@ -298,7 +298,7 @@
                             type: "GET",
                             url: url,
                             headers: {
-                                'Content-Type': 'https://www.corona-hub.kr'
+                                'Content-Type': 'https://corona-hub.herokuapp.com'
                             },
                             dataType: "json",
                             success: function (data) {
