--- a/public/pharmacy.html
+++ b/public/pharmacy.html
@@ -293,7 +293,7 @@
                         })
 
                         var loc = "lat=" + lat + "&lng=" + lng + "&m=5000";
-                        var url = "https://8oi9s0nnth.apigw.ntruss.com/corona19-masks/v1/storesByGeo/json?" + loc
+                        var url = "https://corona-hub.herokuapp.com/https://8oi9s0nnth.apigw.ntruss.com/corona19-masks/v1/storesByGeo/json?" + loc
                         $.ajax({
                             type: "GET",
                             url: url,
